code25_all/scala/8945055.txt
List
Int
scala> val list = List(1, 2, 3, 4, 5)
list: List[Int] = List(1, 2, 3, 4, 5)

List
Traversable
scala> val trav = list: Traversable[Int]
trav: Traversable[Int] = List(1, 2, 3, 4, 5)

scala> list : Traversable
<console>:9: error: type Traversable takes type parameters
       list : Traversable
              ^

scala> list : Traversable[T forSome {type T}]
res2: Traversable[T forSome { type T }] = List(1, 2, 3, 4, 5)

scala> list : Traversable[_]
res3: Traversable[Any] = List(1, 2, 3, 4, 5)

Traversable[Int]
Int
